# adventofcode

./: .gitignore  README.md  add_day.sh  cleanup.sh  pyproject.toml
.github/workflows/: lint.yml  test.yml
adventofcode/: lib.py
adventofcode/day1/: solution.py  test_day1.py
adventofcode/year2022/day1/: solution.py  test_day1.py
adventofcode/year2022/day2/: solution.py  test_day2.py
adventofcode/year2022/day3/: solution.py  test_day3.py
adventofcode/year2022/day4/: solution.py  test_day4.py
adventofcode/year2022/day5/: solution.py  test_day5.py
adventofcode/year2022/day6/: solution.py  test_day6.py
adventofcode/year2022/day7/: solution.py  test_day7.py
adventofcode/year2023/day1/: solution.py  test_day1.py
adventofcode/year2023/day10/: solution.py  test_day10.py
adventofcode/year2023/day2/: solution.py  test_day2.py
adventofcode/year2023/day3/: solution.py  test_day3.py
adventofcode/year2023/day4/: solution.py  test_day4.py
adventofcode/year2023/day5/: solution.py  test_day5.py
adventofcode/year2023/day6/: solution.py  test_day6.py
adventofcode/year2023/day7/: solution.py  test_day7.py
adventofcode/year2023/day8/: solution.py  test_day8.py
adventofcode/year2023/day9/: solution.py  test_day9.py
