[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = ["Thijs <13253091+Thijss@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
ruff = "^0.1.6"
pyright = "^1.1.338"
isort = "^5.12.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["adventofcode"]
strict = ["adventofcode"]

reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.12"
pythonPlatform = "Linux"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.ruff]
line-length = 120